...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3tR-hp-MNC">
                                <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="[Category]" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9fr-B0-rUl">
                                        <rect key="frame" x="95" y="0.0" width="300" height="56"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <fontDescription key="fontDescription" type="system" weight="black" pointSize="20"/>
                                        <color key="textColor" systemColor="systemBlueColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
...
            </objects>
            <point key="canvasLocation" x="957" y="-1356"/>
        </scene>
        <!--Cart-->
        <scene sceneID="vBO-bg-mTn">
            <objects>
                <viewController title="Cart" id="inA-Gv-GzG" customClass="CartViewController" customModule="Project03" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Tr3-NT-TuT">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P7y-er-KE0" userLabel="Menu">
                                <rect key="frame" x="102" y="9" width="210" height="89"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" systemColor="systemGreenColor"/>
                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="24"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="    Menu">
...
